Mon Jun 28 19:37:27 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* gE_view.[ch]: New files... What i've done is re-implemented the 
	  viewable area that you enter text into as a widget, called gE_view.
	  The widget now works the same as the old method, but now the GnomeMDI
	  system will be able to access the member widgets, unlike before.
	
	* main.h: (gE_document) Moved all the view related widgets into the 
          gE_view class structure.
	
	* commands.[ch]: Moved view related functions over to gE_view.[ch]. Also
	  modified any functions that referred to the old method to refer to the
	  new gE_view system.
	
	* gE_document.c:
	  gE_prefs_box.c:
	  gE_plugin_api.c:
	  gE_print.c:
	  menus.c:
	  search.c: Made the functions that used the old view method use the new
	  method. So all doc->text is now either a view->text or a 
	  GE_VIEW (mdi->active_view)->text (as gE_view is the MDI view now).
	
	* There's still lots of bugs, i know.. but the new system is working 
          now.

1999-07-17  Karsten Weiss  <karsten@addx.au.s.shuttle.de>

	* gE_prefs_box.c: (doc_page_new) Tagged two strings as translatable.

Fri Jul  2 16:18:27 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* README: Upped version number to 0.5.4. Also updated various parts
	  of the file to reflect current features and other related items.
	
	* README.plugins, INSTALL, makeconfig.pl: Upped version number to 0.5.4,
	  in preperation of release.
	
	* NEWS: Added Announce message for 0.5.4.

Sat Jun 26 22:22:17 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* Erk! i havent been keeping this up to date.. ahwell.. here goes..
	
	* gE_document.[ch]: (gE_window_new) Make it a GnomeApp arg, instead
	  of a GtkWidget.. much nicer.. And commented out the call to
	  gE_set_menu_toggle_states, gnome-libs 1.0.11 doenst seem to like it..
	
	* gE_mdi.c: various improvements.. (iirc ;)
	
	* gE_prefs.[ch]: Added a "close doc" flag..
	
	* gE_prefs_box.c: Moved the print tab to a Document tab, and added a